# RemoveBackground

./: .gitignore  Cargo.toml  INSTALL.md  README-RUST.md  README.md  RUST_REFACTORING.md  cli.py  removebg.py  requirements.txt  setup.py  test_removebg.py
.removebg/: pyvenv.cfg
removebg/: __init__.py  cli.py  core.py
src/: core.rs  error.rs  lib.rs  main.rs
tests/: __init__.py  test_removebg.py
