[package]
name = "removebg"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "AI-powered background removal tool using U2-Net deep learning model"
license = "MIT"
repository = "https://github.com/yourusername/removebg"
readme = "README-RUST.md"

[dependencies]
# Image processing
image = "0.25"

# ONNX Runtime for running U2-Net model
ort = "2.0.0-rc.10"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for downloading model
ureq = { version = "3.1", default-features = false, features = ["rustls"] }

# Progress indicators
indicatif = "0.17"

# Tensor operations
ndarray = "0.16"

# Directory utilities
dirs = "5.0"

[lib]
name = "removebg"
path = "src/lib.rs"

[[bin]]
name = "removebg"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
